Produzione/force-app/main/default/objects/Domanda_Questionario__c/Domanda_Questionario__c.object-meta.xml
<CustomObject>
    <description>Domande che compongono il questionario</description>
    <label>Domanda Questionario</label>
    <nameField>
        <label>Nome Domanda</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Domande Questionario</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>