Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Abilita_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Abilita_Feedback__c</fullName>
    <description>Se abilitati il feedback, mostro la domanda</description>
    <formula>IF(OR(NOT(ISBLANK(Partecipazione_Workshop__c)),NOT(ISBLANK(Workshop__c))),
OR(Workshop__r.Abilita_Feedback__c, Partecipazione_Workshop__r.AbilitaFeedback__c)
,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abilita Feedback</label>
    <type>Checkbox</type>
</CustomField>