Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Data_Ora_Fine__c.field-meta.xml
<CustomField>
    <fullName>Data_Ora_Fine__c</fullName>
    <label>Data Ora Fine</label>
    <type>DateTime</type>
</CustomField>