Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Data_Ora_Inizio_Analisi__c.field-meta.xml
<CustomField>
    <fullName>Data_Ora_Inizio_Analisi__c</fullName>
    <description>Data e ora che definisce l&apos;inizio di quando la domanda dev&apos;essere presa in considerazione per le analisi</description>
    <inlineHelpText>Data e ora che definisce l&apos;inizio di quando la domanda dev&apos;essere presa in considerazione per le analisi</inlineHelpText>
    <label>Data Ora Inizio Analisi</label>
    <type>DateTime</type>
</CustomField>