Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Data_Ora_Notifica__c.field-meta.xml
<CustomField>
    <fullName>Data_Ora_Notifica__c</fullName>
    <label>Data Ora Notifica</label>
    <type>DateTime</type>
</CustomField>