Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Descrizione_EN__c.field-meta.xml
<CustomField>
    <fullName>Descrizione_EN__c</fullName>
    <description>Eventuale descrizione per la domanda (sottotitolo) (EN)</description>
    <label>Descrizione EN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>