Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Descrizione_IT__c.field-meta.xml
<CustomField>
    <fullName>Descrizione_IT__c</fullName>
    <description>Eventuale descrizione per la domanda (sottotitolo) (IT)</description>
    <label>Descrizione IT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>