Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Domanda_IT__c.field-meta.xml
<CustomField>
    <fullName>Domanda_IT__c</fullName>
    <label>Domanda IT</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>