Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Domanda_Padre__c.field-meta.xml
<CustomField>
    <fullName>Domanda_Padre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Eventuale domanda padre di quella attuale (per scelte multiple)</description>
    <label>Domanda Padre</label>
    <referenceTo>Domanda_Questionario__c</referenceTo>
    <relationshipLabel>Domande Questionario</relationshipLabel>
    <relationshipName>Domande_Questionario</relationshipName>
    <type>Lookup</type>
</CustomField>