Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Etichetta__c.field-meta.xml
<CustomField>
    <fullName>Etichetta__c</fullName>
    <description>Etichetta per identificare la domanda</description>
    <inlineHelpText>Etichetta per identificare la domanda. Es. titolo della domanda</inlineHelpText>
    <label>Etichetta</label>
    <type>TextArea</type>
</CustomField>