Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Ha_padre__c.field-meta.xml
<CustomField>
    <fullName>Ha_padre__c</fullName>
    <formula>Domanda_Padre__c  &lt;&gt; &apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ha padre</label>
    <type>Checkbox</type>
</CustomField>