Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Info_Domanda_Padre__c.field-meta.xml
<CustomField>
    <fullName>Info_Domanda_Padre__c</fullName>
    <description>Informazioni relative alla domanda padre se presente</description>
    <formula>IF(NOT(ISBLANK( Domanda_Padre__c )),
 &quot;Etichetta: &quot; + Domanda_Padre__r.Etichetta__c + BR() +
  IF(NOT(ISBLANK( Domanda_Padre__r.Workshop__c)), 
   &quot;Workshop: &quot; + Domanda_Padre__r.Workshop__r.Name + BR(),
   &quot;&quot;
  ) +
  IF(NOT(ISBLANK(Domanda_Padre__r.Partecipazione_Workshop__r.Partecipante__c)), 
   &quot;Speaker: &quot; + Domanda_Padre__r.Partecipazione_Workshop__r.Partecipante__r.Name + BR(),
   &quot;&quot;
  ),
 &quot;&quot;
)</formula>
    <inlineHelpText>Informazioni relative alla domanda padre se presente</inlineHelpText>
    <label>Info Domanda Padre</label>
    <type>Text</type>
</CustomField>