Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Insieme_Opzioni_Domanda__c.field-meta.xml
<CustomField>
    <fullName>Insieme_Opzioni_Domanda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insieme Opzioni Domanda</label>
    <referenceTo>Insieme_Opzioni_Domanda__c</referenceTo>
    <relationshipLabel>Domande questionario</relationshipLabel>
    <relationshipName>Domande_questionario</relationshipName>
    <type>Lookup</type>
</CustomField>