Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Nome_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Nome_Speaker__c</fullName>
    <description>Nome e cognome del relatore se associato alla domanda</description>
    <formula>Partecipazione_Workshop__r.Partecipante__r.Nome1__c + &quot; &quot; +  Partecipazione_Workshop__r.Partecipante__r.Cognome1__c</formula>
    <inlineHelpText>Nome e cognome del relatore se associato alla domanda</inlineHelpText>
    <label>Nome Speaker</label>
    <type>Text</type>
</CustomField>