Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Nome_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Nome_Workshop__c</fullName>
    <description>Nome del workshop se associato alla domanda</description>
    <formula>Workshop__r.Name</formula>
    <inlineHelpText>Nome del workshop se associato alla domanda</inlineHelpText>
    <label>Nome Workshop</label>
    <type>Text</type>
</CustomField>