Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Notifica_Risultato__c.field-meta.xml
<CustomField>
    <fullName>Notifica_Risultato__c</fullName>
    <label>Notifica Risultato</label>
    <type>DateTime</type>
</CustomField>