Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Obbligatoria__c.field-meta.xml
<CustomField>
    <fullName>Obbligatoria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>La domanda è obbligatoria (compare asterisco)</description>
    <label>Obbligatoria</label>
    <type>Checkbox</type>
</CustomField>