Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Obbligatoria_Per_Risultati__c.field-meta.xml
<CustomField>
    <fullName>Obbligatoria_Per_Risultati__c</fullName>
    <description>Se settato, rende obbligatoria la risposta per visualizzare la specifica schermata dei risultati</description>
    <inlineHelpText>Se settato, rende obbligatoria la risposta per visualizzare la specifica schermata dei risultati</inlineHelpText>
    <label>Obbligatoria Per Risultati</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealer Dashboard</fullName>
            </value>
            <value>
                <fullName>Dealer Altri risultati</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>