Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Ordine__c.field-meta.xml
<CustomField>
    <fullName>Ordine__c</fullName>
    <description>Ordine della domanda all&apos;interno della pagina/sezione</description>
    <label>Ordine</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>