Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Pagina__c.field-meta.xml
<CustomField>
    <fullName>Pagina__c</fullName>
    <description>In che pagina compare la domanda</description>
    <label>Pagina</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>