Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Partecipazione_Evento__c.field-meta.xml
<CustomField>
    <fullName>Partecipazione_Evento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Se collegato è valutazione per Sponsor</description>
    <inlineHelpText>Se collegato è valutazione per Sponsor</inlineHelpText>
    <label>Partecipazione Evento</label>
    <referenceTo>Partecipazione_Evento__c</referenceTo>
    <relationshipLabel>Domande Questionario</relationshipLabel>
    <relationshipName>Domande_Questionario</relationshipName>
    <type>Lookup</type>
</CustomField>