Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Partecipazione_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Partecipazione_Workshop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Eventuale speaker collegato alla domanda</description>
    <label>Partecipazione Workshop</label>
    <referenceTo>Partecipazioni_Workshop__c</referenceTo>
    <relationshipLabel>Domande Questionario</relationshipLabel>
    <relationshipName>Domande_Questionario</relationshipName>
    <type>Lookup</type>
</CustomField>