Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Priorita__c.field-meta.xml
<CustomField>
    <fullName>Priorita__c</fullName>
    <label>Priorità</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>