Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Questionario__c.field-meta.xml
<CustomField>
    <fullName>Questionario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Questionario a cui appartiene la domanda</description>
    <label>Questionario</label>
    <referenceTo>Questionario__c</referenceTo>
    <relationshipLabel>Domande Questionario</relationshipLabel>
    <relationshipName>Domande_Questionario</relationshipName>
    <type>Lookup</type>
</CustomField>