Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Ragg_Indice_Visualizzabile_da_dealer_in__c.field-meta.xml
<CustomField>
    <fullName>Ragg_Indice_Visualizzabile_da_dealer_in__c</fullName>
    <formula>IF(ISPICKVAL(Raggruppamento__r.Visualizzabile_da_dealer_in__c,&quot;Dealer Map&quot;),&quot;Dealer Map&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ragg Indice Visualizzabile da dealer in</label>
    <type>Text</type>
</CustomField>