Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Ragg_Visualizzabile_da_manager_in__c.field-meta.xml
<CustomField>
    <fullName>Ragg_Visualizzabile_da_manager_in__c</fullName>
    <formula>TEXT(Raggruppamento__r.Visualizzabile_da_manager_in__c)</formula>
    <label>Ragg Visualizzabile da manager in</label>
    <type>Text</type>
</CustomField>