Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Range_Valutazione__c.field-meta.xml
<CustomField>
    <fullName>Range_Valutazione__c</fullName>
    <defaultValue>9</defaultValue>
    <description>Numero di stelline per il tipo valutazione</description>
    <label>Range Valutazione</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>