Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Sezione__c.field-meta.xml
<CustomField>
    <fullName>Sezione__c</fullName>
    <description>Sezione di cui fa parte la domanda, e posizione della sezione nella pagina</description>
    <label>Sezione</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>