Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Suggerimento__c.field-meta.xml
<CustomField>
    <fullName>Suggerimento__c</fullName>
    <label>Suggerimento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>