Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Testo_EN__c.field-meta.xml
<CustomField>
    <fullName>Testo_EN__c</fullName>
    <description>Testo della domanda (EN)</description>
    <label>Testo EN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>