Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Testo_IT__c.field-meta.xml
<CustomField>
    <fullName>Testo_IT__c</fullName>
    <description>Testo della domanda (IT)</description>
    <label>Testo IT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>