Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <description>Tipologia della domanda</description>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informativo</fullName>
            </value>
            <value>
                <fullName>Testo semplice</fullName>
            </value>
            <value>
                <fullName>Testo lungo</fullName>
            </value>
            <value>
                <fullName>Numerico	Numerico</fullName>
            </value>
            <value>
                <fullName>Valutazione</fullName>
            </value>
            <value>
                <fullName>Vero/falso</fullName>
            </value>
            <value>
                <fullName>Scelta multipla</fullName>
            </value>
            <value>
                <fullName>Valutazione multipla</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Menu di selezione singol</fullName>
            </value>
            <value>
                <fullName>Opzione</fullName>
            </value>
            <value>
                <fullName>Radio con commento</fullName>
            </value>
            <value>
                <fullName>Radio con commento obbligatorio</fullName>
            </value>
            <value>
                <fullName>Radio con commento obbligatorio se minore di 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>