Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/URL_Cover__c.field-meta.xml
<CustomField>
    <fullName>URL_Cover__c</fullName>
    <description>Utilizzata nei questionari feedback in caso si voglia associare una immagine alla domanda (e.g. logo azienda o relatore)</description>
    <inlineHelpText>Utilizzata nei questionari feedback in caso si voglia associare una immagine alla domanda (e.g. logo azienda o relatore)</inlineHelpText>
    <label>URL Cover</label>
    <type>Url</type>
</CustomField>