Produzione/force-app/main/default/objects/Domanda_Questionario__c/fields/Workshop__c.field-meta.xml
<CustomField>
    <fullName>Workshop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Eventuale workshop collegato</description>
    <label>Workshop</label>
    <referenceTo>Workshop__c</referenceTo>
    <relationshipLabel>Domande Questionario</relationshipLabel>
    <relationshipName>Domande_Questionario</relationshipName>
    <type>Lookup</type>
</CustomField>