Produzione/force-app/main/default/objects/Domanda_Questionario__c/listViews/Feedback_ADD20.listView-meta.xml
<ListView>
    <fullName>Feedback_ADD20</fullName>
    <columns>NAME</columns>
    <columns>Etichetta_IT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Questionario__c</field>
        <operation>equals</operation>
        <value>ADD20 Feedback</value>
    </filters>
    <label>Feedback ADD20</label>
</ListView>