Produzione/force-app/main/default/objects/Domanda_Questionario__c/listViews/Feedback_ADD21.listView-meta.xml
<ListView>
    <fullName>Feedback_ADD21</fullName>
    <columns>NAME</columns>
    <columns>Testo_IT__c</columns>
    <columns>Testo_EN__c</columns>
    <columns>Tipologia__c</columns>
    <columns>Visibile__c</columns>
    <columns>Sezione__c</columns>
    <columns>Pagina__c</columns>
    <columns>Ordine__c</columns>
    <columns>Domanda_Padre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Questionario__c</field>
        <operation>equals</operation>
        <value>ADD21 Feedback</value>
    </filters>
    <label>Feedback ADD21</label>
</ListView>