Produzione/force-app/main/default/objects/Domanda_Questionario__c/listViews/TMI_RCC_Domande.listView-meta.xml
<ListView>
    <fullName>TMI_RCC_Domande</fullName>
    <columns>NAME</columns>
    <columns>Data_Ora_Fine__c</columns>
    <columns>Data_Ora_Fine_Analisi__c</columns>
    <columns>Data_Ora_Inizio__c</columns>
    <columns>Data_Ora_Inizio_Analisi__c</columns>
    <columns>Data_Ora_Notifica__c</columns>
    <columns>Domanda_IT__c</columns>
    <columns>Domanda_Non_Visibile__c</columns>
    <columns>Etichetta_IT__c</columns>
    <columns>Etichetta_Raggruppamento__c</columns>
    <columns>Gruppo_Raggruppamento__c</columns>
    <columns>Etichetta_Raggruppamento_Genitore__c</columns>
    <columns>Ragg_Visualizzabile_da_dealer_in__c</columns>
    <columns>Ragg_Visualizzabile_da_manager_in__c</columns>
    <columns>Ragg_Indice_Visualizzabile_da_dealer_in__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Questionario__c</field>
        <operation>equals</operation>
        <value>TMI RCC</value>
    </filters>
    <label>TMI RCC Domande</label>
</ListView>